--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "vue3-help",
-  "version": "0.0.3",
+  "version": "0.0.7",
   "description": "Vue3 帮助工程",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -21,5 +23,10 @@
   },
   "author": "Your Name <your@email.com>",
   "license": "MIT",
-  "keywords": ["vue3", "help", "npm", "library"]
+  "keywords": [
+    "vue3",
+    "help",
+    "npm",
+    "library"
+  ]
 }
