--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-help",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Vue3 帮助工程",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -11,15 +11,18 @@
   "scripts": {
     "clean": "rd /s /q dist && mkdir dist",
     "build": "tsc -p tsconfig.json",
+    "minify": "node minify.js",
     "dev": "vite",
     "preview": "vite preview",
-    "prepare": "npm run clean && npm run build"
+    "prepare": "npm run clean && npm run build && npm run minify"
   },
   "peerDependencies": {
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "glob": "^10.4.2",
+    "terser": "^5.31.1",
     "typescript": "^5.5.2",
     "vite": "^5.3.1"
   },
