--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-help",
-  "version": "0.0.14",
+  "version": "0.0.16",
   "description": "Vue3 帮助工程",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -21,8 +21,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.19",
     "glob": "^10.4.2",
+    "postcss": "^8.4.38",
     "rimraf": "^5.0.7",
+    "tailwindcss": "^3.4.4",
     "terser": "^5.31.1",
     "typescript": "^5.5.2",
     "vite": "^5.3.1"
@@ -37,6 +40,9 @@
   ],
   "dependencies": {
     "@babel/types": "^7.24.7",
+    "dayjs": "^1.11.11",
+    "loadsh": "^0.0.4",
+    "md5": "^2.3.0",
     "vue": "^3.4.21"
   }
 }
